kubernetes/dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tobedone-deployment
  labels:
    app: tobedone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tobedone
  template:
    metadata:
      labels:
        app: tobedone
    spec:
      containers:
        - name: tobedone
          image: leolazz/2bdone:2.3
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '128Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1000m'
          volumeMounts:
            - mountPath: /db
              name: tobedone-data
          imagePullPolicy: Always
      volumes:
        - name: tobedone-data
          persistentVolumeClaim:
            claimName: tobedone-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tobedone-service
  labels:
    app: tobedone
spec:
  ports:
    - port: 80
      targetPort: 80
      name: tcp
  selector:
    app: tobedone
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tobedone-ingress
  labels:
    app: tobedone
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
    - host: tobedone.internal.lazz.tech
      http:
        paths:
          - backend:
              serviceName: tobedone-service
              servicePort: 80
